# revi

./: Cargo.toml
crates/revi-core/: Cargo.toml
crates/revi-core/src/: api.rs  buffer.rs  commands.rs  key_parser.rs  keymapper.rs  lib.rs  line_number.rs  mode.rs  position.rs  revi.rs  text_formater.rs  window.rs
crates/revi-core/tests/: buffer.rs  revi.rs  window.rs
crates/revi-ui/: Cargo.toml
crates/revi-ui/src/: key.rs  lib.rs  ui.rs
src/: commandline.rs  main.rs
