[package]
name = "revi-core"
version = "0.0.1"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2021"
description = "Provides core functionality for revi test editor."
repository = "https://github.com/revi-editor/revi"
license = "MIT"
keywords = ["revi"]

[dependencies]
clap = "3.2.17"
mlua = { version = "0.8.3", features = ["lua54", "vendored", "serialize", "macros"] }
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
revi-ui = { path = "../revi-ui" }
ropey = "1.3.1"
serde = { version = "1.0.136", features = ["derive"] }

[features]
debug_bar = []
debug_line = []
debug_line_words = []
debug_input_number = []
debug_offset = []
